Setup path, inline docu on dataloader_steam
More documentation on read_app_info

Error found for `dgl.dataloading.MultiLayerFullNeighborSampler` when passing `return_eid` as an arg on dgl 0.7+, works on 0.6.x

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # steam_data folders
 steam_data
+steam_data_tiny
+
+# debugging
+test_main.py
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
